Problemas com delete de exemplares e listagem do acervo do usuário

--- a/insertBooks.html
+++ b/insertBooks.html
@@ -17,7 +17,7 @@
     Autor: <input type="text" ng-model="author"><br><br>
     Área: <input type="text" ng-model="area"><br><br>
     <button ng-click="insere()">INSERE</button> &nbsp;
-    <!--<button ng-click="atualiza()">ATUALIZA</button> &nbsp;-->
+    <button ng-click="atualiza()">ATUALIZA</button> &nbsp;
     
   </form>
 
