corrigido o texto da pagina inicial

--- a/index.html
+++ b/index.html
@@ -6,12 +6,12 @@
 </head>
 <body>
 
-<h1>Cadastro de Livros</h1>
+<h1>Busca de Livros</h1>
 
 <br>
 
 <div ng-app="myApp" ng-controller="myCtrl">
-  Preencha todos os campos abaixo para cadastrar, atualizar ou remover um novo livro: <br><br>
+  Preencha o campo abaixo para buscar um livro: <br><br>
 
 
     <form>
