--- a/visSolicitation.html
+++ b/visSolicitation.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular.min.js"></script>
+<script src="//ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular-cookies.js"></script>
 
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset-UTF-8" />
