casos de uso trocas implementados agradeço a todos pelo jornada foi muito bom servir com vocês

--- a/buscaExemplar.html
+++ b/buscaExemplar.html
@@ -122,7 +122,7 @@ app.controller('myCtrl', function($scope, $http, $cookies) {
         "UserReq": cookiesUser,
         "UserResp": $scope.jsonCopies[copiesIndex].owner,
         "titleBook": $scope.jsonBooks[booksIndex].title,
-        "copyID": $scope.jsonCopies[copiesIndex].copyID
+        "bookID": $scope.jsonCopies[copiesIndex].bookID
     };
 
 
